<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="20sp" />

        <TextView
            android:id="@+id/movieTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MovieTitle"
            android:textSize="25sp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10sp" />

        <EditText
            android:id="@+id/txtMovieTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:hint="@string/TitleHint"
            android:singleLine="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="20sp" />

        <TextView
            android:id="@+id/movieYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movieYear"
            android:textSize="25sp"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="10sp" />

        <Spinner
            android:id="@+id/yearSelector"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></Spinner>

        <View
            android:layout_width="match_parent"
            android:layout_height="20sp" />

        <TextView
            android:id="@+id/movieActor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movieActor"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="10sp" />

        <EditText
            android:id="@+id/txtMovieActor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:hint="@string/ActorHint"
            android:singleLine="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnEnterAdd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/movieAdd"
                android:layout_marginTop="45sp"/>

            <Button
                android:id="@+id/btnEnterDone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/movieDone"
                android:layout_marginTop="45sp"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>